[package]
name = "beast"
description = "(be)nchmark (a)nalysis and (s)ummary (t)ool to run, summarize and plot google benchmark executables."
version = "0.2.0"
authors = ["Björn Barschtipan"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
is_executable = "0.1.2"
glob = "0.3.0"
walkdir = "2.3.1"
clap = "2.33.3"
indicatif = "0.15.0"
plotly = "0.6.0"
serde = "1.0.106"
serde_json = "1.0"
