[package]
name = "beast"
description = "(be)nchmark (a)nalysis and (s)ummary (t)ool"
version = "2.0.0"
authors = ["Björn Barschtipan"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
is_executable = "0.1.2"
walkdir = "2.3.1"
clap = "2.33.3"
indicatif = "0.15.0"
plotly = "0.6.0"
serde = "1.0.106"
serde_json = "1.0"
preferences = "1.1.0"
regex = "1.4.1"
colored = "2"
yaml-rust = "0.4.4"
serde_yaml= "0.8.14"
git2 = "0.13.12"
execute = "0.2.8"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[package.metadata.deb]
maintainer = "Björn Barschtipan"
copyright = "2020, Björn Barschtipan"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple command line tool to execute google benchmarks \
and visualize the results in an nice plot."""
depends = "$auto"
section = "utility"
priority = "optional"
